debug teacher student graderstudent

--- a/finalOOP_pro1/finalOOP_pro1/finalOOP_pro1.vcxproj
+++ b/finalOOP_pro1/finalOOP_pro1/finalOOP_pro1.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="finalOOP_pro1.cpp" />
+    <ClCompile Include="starter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="project1_starter.h" />
